--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,14 @@ add_executable("${PROJECT_NAME}.x" src/main.cpp
         src/Engine.h
         src/AuxiliaryFunctions.cpp
         src/AuxiliaryFunctions.h
-        src/Writers.cpp
-        src/Writers.h
+        src/IO/Writers.cpp
+        src/IO/Writers.h
         src/TriDiag.cpp
         src/TriDiag.h
         src/IO/Readers.cpp
         src/IO/Readers.h
-        src/Parameters.h)
+        src/Parameters.h
+        src/Geometry.cpp
+        src/Geometry.h
+        src/Polygon.cpp
+        src/Polygon.h)
