Add grid interpolation routines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,9 @@ add_executable(${EXENAME} src/main.cpp
         src/Geometry.h
         src/Polygon.cpp
         src/Polygon.h
-        src/IO/hdf_writer.h)
+        src/IO/hdf_writer.h
+        src/GridInterpolator.cpp
+        src/GridInterpolator.h)
 
 target_link_libraries(${EXENAME} PRIVATE HDF5::HDF5)
 target_link_libraries(${EXENAME} PRIVATE Boost::boost)
@@ -31,5 +33,8 @@ target_link_libraries(${EXENAME} PRIVATE Boost::boost)
 #set(ENABLE_TEST 1)
 
 if (ENABLE_TEST)
-    add_executable(testSuite.x test/test.cpp src/TriDiag.cpp src/TriDiag.h src/Polygon.cpp src/Polygon.h src/AuxiliaryFunctions.cpp src/AuxiliaryFunctions.h src/Geometry.cpp src/Geometry.h)
+    add_executable(testSuite.x test/test.cpp src/TriDiag.cpp src/TriDiag.h src/Polygon.cpp src/Polygon.h src/AuxiliaryFunctions.cpp src/AuxiliaryFunctions.h src/Geometry.cpp src/Geometry.h
+            src/GridInterpolator.cpp
+            src/GridInterpolator.h)
 endif ()
+
